fix:cover&gap

--- a/src/assets/css/riyuemingzun/index.less
+++ b/src/assets/css/riyuemingzun/index.less
@@ -384,6 +384,11 @@ body {
 }
 
 //烛龙殿,
+.m-six-gap {
+    .size(100%, 350px);
+    background: url("@{kv_riyuemingzun}/p5/p5-gap.png")top center no-repeat;
+}
+
 .m-six {
     .size(100%, 1400px);
     .pr;
@@ -469,13 +474,13 @@ body {
         }
 
         .m-buttonGroup {
-            .size(410px, 60px);
+            .size(440px, 58px);
             .flex;
             justify-content: space-between;
             .ml(43px);
 
             .u-button {
-                .size(195px, 100%);
+                .size(200px, 100%);
                 background: url("@{kv_riyuemingzun}/p3/p3-button.png")no-repeat;
                 opacity: 0.6;
                 .bold;
